# -

./: .bandit  .cursorignore  .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.py  tox.ini
config/: config.yaml  default_config.json  logging_config.json
core/: __init__.py  assertion_manager.py  device_manager.py  recorder.py  testcase_manager.py
gui/: __init__.py  assert_tab.py  config_tab.py  device_tab.py  main_window.py  platform_tab.py  playback_tab.py  record_tab.py  report_tab.py  testcase_tab.py  toolbar.py
gui/dialogs/: __init__.py  step_editor.py
resources/: icons.qrc  style.qss
ui/: main_window.py
utils/: __init__.py  config.py  constants.py  errors.py  helpers.py  logger.py
